--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,4 +1,11 @@
 #  The contact options.
+- type: linkedin
+  icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
+  url:  'https://www.linkedin.com/in/richard-chamberlain-b9945a32/'
+
+- type: Facebook
+  icon: 'fab fa-facebook'   # icons powered by <https://fontawesome.com/>
+  url:  'https://www.facebook.com/richard.chamberlain'
 
 - type: github
   icon: "fab fa-github"
@@ -6,9 +13,11 @@
 - type: twitter
   icon: "fa-brands fa-x-twitter"
 
+
 - type: email
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
+
 
 - type: rss
   icon: "fas fa-rss"
@@ -19,10 +28,7 @@
 #   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
 #   url:  ''                  # Fill with your Mastodon account page, rel="me" will be applied for verification
 #
-# - type: linkedin
-#   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your Linkedin homepage
-#
+  
 # - type: stack-overflow
 #   icon: 'fab fa-stack-overflow'
 #   url:  ''                  # Fill with your stackoverflow homepage
