pushing article media changes

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: America/Regina
 
 title: Sebos Technology # the main title
 
-tagline: Partnering to Build a Safer Cyber World, One Project at a Time. # it will display as the subtitle
+tagline: Partnering with you to build a safer cyber world, one project at a time. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
